<resources>
    <string name="app_name">Study</string>
    <string name="action_search">Search</string>
    <string name="spinner_location">选择定位方式</string>
    <string name="search_hint">选择你要的教室</string>
    <string name="sample_service_url">http://123.206.28.56:6080/arcgis/rest/services/map/MapServer/17</string>
    <string name="server">http://123.206.28.56:6080/arcgis/rest/services/map/MapServer</string>
    <string name="server_floor1">http://123.206.28.56:6080/arcgis/rest/services/floor/MapServer/0</string>
    <string name="server_floor2">http://123.206.28.56:6080/arcgis/rest/services/floor/MapServer/1</string>
    <string name="server_floor3">http://123.206.28.56:6080/arcgis/rest/services/floor/MapServer/2</string>
    <string name="server_floor4">http://123.206.28.56:6080/arcgis/rest/services/floor/MapServer/3</string>
    <string name="server_floor5">http://123.206.28.56:6080/arcgis/rest/services/floor/MapServer/4</string>
    <string name="title_1">定位您的位置</string>
    <string name="title_2">热力分析</string>
    <string name="title_3">个人信息</string>
    <string name="title_4">关于我们</string>
    <string name="title_5">番茄时钟</string>

    <string name="text_1">定位您的位置并且绘制您的轨迹</string>
    <string name="text_2">看您关心的地方有多少人</string>
    <string name="text_3">您的个人界面</string>
    <string name="text_4">LoveStudy开发者团队</string>
    <string name="text_5">管理您的学习时间</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="write_work_name">请输入任务名称</string>

    <string name="write_work_time1">30分钟</string>
    <string name="write_work_time2">5分钟</string>
    <string name="write_work_time3">20分钟</string>

    <string name="work_time_long">工作时长</string>
    <string name="good_time_long">休息时长</string>
    <string name="game_time_long">游戏时长</string>

    <string name="dialog_title">标题</string>

    <string name="button_yes">确定</string>
    <string name="button_no">取消</string>

    <string name="work_button1">开始休息</string>
    <string name="work_button2">开始工作</string>

    <string name="jcyx_text">坚持一下，胜利就在前方！</string>

    <string name="work_name">未命名任务</string>
    <string name="message">我的轨迹</string>
    <string name="question">我的时间</string>
    <string name="blog">我的排名</string>
    <string name="team">定制学习</string>
</resources>
