<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/thirty_bg"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.henshin.study.fanqie.FanqieActivity" >

    <Button
        android:id="@+id/work_button1"
        android:layout_width="80dip"
        android:layout_height="80dip"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_margin="@dimen/linearlayou_center_margin"
        android:background="@drawable/button_oval_selector"
        android:text="@string/work_button1" />

    <Button
        android:id="@+id/work_button2"
        android:layout_width="80dip"
        android:layout_height="80dip"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_margin="@dimen/linearlayou_center_margin"
        android:background="@drawable/button_oval_selector"
        android:text="@string/work_button2" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relative_center"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dip"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/work_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/tomato_gray"
            android:gravity="center_vertical"
            android:text="@string/work_name"
            android:textColor="#ffffff"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/jcyx_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:gravity="center_vertical"
            android:text="@string/jcyx_text"
            android:textColor="#ffffff"
            android:textSize="16sp" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/relative_center"
        android:layout_width="match_parent"
        android:layout_height="260dip"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dip" >

        <com.example.henshin.study.fanqie.WaterWave
            android:id="@+id/waterWave1"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <ImageButton
            android:id="@+id/button_ok"
            android:layout_width="150dip"
            android:layout_height="150dip"
            android:layout_centerInParent="true"
            android:background="@drawable/button_oval_bg4"
            android:contentDescription="@string/app_name"
            android:scaleType="centerInside"
            android:src="@drawable/icon_status_unfinished" />
    </RelativeLayout>

</RelativeLayout>