<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:gravity="center_vertical|center_horizontal"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/dialog_title"
        android:layout_width="match_parent"
        android:layout_height="50dip"
        android:gravity="center_vertical"
        android:paddingLeft="10dip"
        android:text="@string/dialog_title"
        android:textColor="#222222"
        android:textSize="20sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginBottom="10dip"
        android:background="#87CEFA" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dip"
        android:background="#ffffff"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="28dip"
            android:layout_height="28dip"
            android:contentDescription="@string/app_name"
            android:src="@drawable/tomato_gray" />

        <TextView
            android:id="@+id/work_time_long"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/work_time_long"
            android:textColor="#555555" />
    </LinearLayout>

    <SeekBar
        android:id="@+id/seekbar1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dip"
        android:layout_marginLeft="28dip"
        android:layout_marginRight="28dip"
        android:layout_marginTop="10dip"
        android:max="120"
        android:progress="30" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="28dip"
        android:background="#dddddd" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dip"
        android:background="#ffffff"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="28dip"
            android:layout_height="28dip"
            android:contentDescription="@string/app_name"
            android:src="@drawable/shortrest_gray" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/good_time_long"
            android:textColor="#555555" />
    </LinearLayout>

    <SeekBar
        android:id="@+id/seekbar2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dip"
        android:layout_marginLeft="28dip"
        android:layout_marginRight="28dip"
        android:layout_marginTop="10dip"
        android:max="120"
        android:progress="30" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="28dip"
        android:background="#dddddd" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dip"
        android:background="#ffffff"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="28dip"
            android:layout_height="28dip"
            android:contentDescription="@string/app_name"
            android:src="@drawable/longrest_gray" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/game_time_long"
            android:textColor="#555555" />
    </LinearLayout>

    <SeekBar
        android:id="@+id/seekbar3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dip"
        android:layout_marginLeft="28dip"
        android:layout_marginRight="28dip"
        android:layout_marginTop="10dip"
        android:max="120"
        android:progress="30" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#dddddd" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dip"
        android:background="#ffffff"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/button_yes"
            style="android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="50dip"
            android:layout_weight="1"
            android:text="@string/button_yes" />

        <Button
            android:id="@+id/button_no"
            style="android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="50dip"
            android:layout_weight="1"
            android:text="@string/button_no" />
    </LinearLayout>

</LinearLayout>