<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mian_bg"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.henshin.study.fanqie.FanqieActivity" >


    <RelativeLayout
        android:id="@+id/linearlayou_center"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:layout_centerVertical="true" >

        <EditText
            android:id="@+id/work_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/linearlayou_center_margin"
            android:gravity="center_horizontal"
            android:hint="@string/write_work_name"
            android:textColorHint="@color/edit_hint_color1" />

        <RelativeLayout
            android:id="@+id/linearlayou_center_relative1"
            android:layout_width="50dip"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_marginBottom="@dimen/linearlayou_center_margin"
            android:layout_marginLeft="@dimen/linearlayou_center_margin" >

            <Button
                android:id="@+id/home_tab2"
                android:layout_width="30dip"
                android:layout_height="30dip"
                android:layout_centerHorizontal="true"
                android:layout_margin="3dip"
                android:background="@drawable/logo_notif_s" />

            <TextView
                android:id="@+id/work_time1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/home_tab2"
                android:gravity="center_horizontal"
                android:singleLine="true"
                android:text="@string/write_work_time1"
                android:textColor="@color/text_color1"
                android:textSize="16sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/linearlayou_center_relative2"
            android:layout_width="50dip"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/linearlayou_center_margin" >

            <Button
                android:id="@+id/home_tab3"
                android:layout_width="30dip"
                android:layout_height="30dip"
                android:layout_centerHorizontal="true"
                android:layout_margin="3dip"
                android:background="@drawable/shortrest" />

            <TextView
                android:id="@+id/work_time2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/home_tab3"
                android:gravity="center_horizontal"
                android:singleLine="true"
                android:text="@string/write_work_time2"
                android:textColor="@color/text_color1"
                android:textSize="16sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/linearlayou_center_relative3"
            android:layout_width="50dip"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="@dimen/linearlayou_center_margin"
            android:layout_marginRight="@dimen/linearlayou_center_margin" >

            <Button
                android:id="@+id/home_tab4"
                android:layout_width="30dip"
                android:layout_height="30dip"
                android:layout_centerHorizontal="true"
                android:layout_margin="3dip"
                android:background="@drawable/longrest" />

            <TextView
                android:id="@+id/work_time3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/home_tab4"
                android:gravity="center_horizontal"
                android:singleLine="true"
                android:text="@string/write_work_time3"
                android:textColor="@color/text_color1"
                android:textSize="16sp" />
        </RelativeLayout>
    </RelativeLayout>

    <ImageButton
        android:id="@+id/work_start"
        android:layout_width="80dip"
        android:layout_height="80dip"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/linearlayou_center_margin"
        android:background="@drawable/button_oval_selector"
        android:contentDescription="@string/app_name"
        android:scaleType="fitXY"
        android:src="@drawable/icon_begin" />

</RelativeLayout>