<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ques_bt_text_color_light"
    android:fitsSystemWindows="false"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="220dp">

        <com.dean.library.FloatBackground
            android:id="@+id/user_view_solar_system"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary"
            android:contentDescription="@null"
            android:paddingBottom="8dp"
            android:scaleType="centerCrop"
            app:layout_collapseMode="parallax"
            app:layout_collapseParallaxMultiplier="0.7" />

        <LinearLayout
            android:id="@+id/rl_show_my_info"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal|top"
            android:orientation="vertical"
            android:paddingBottom="8dp">

            <RelativeLayout
                android:id="@+id/user_info_head_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/iv_logo_zxing"
                    android:layout_width="44dp"
                    android:layout_height="44dp"
                    android:layout_gravity="center_vertical|right"
                    android:background="@drawable/ic_title_bar_icon_bg"
                    android:contentDescription="@null"
                    android:padding="12dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/btn_qrcode"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true" />

                <ImageView
                    android:id="@+id/iv_logo_setting"
                    android:layout_width="44dp"
                    android:layout_height="44dp"
                    android:layout_gravity="center_vertical|left"
                    android:background="@drawable/ic_title_bar_icon_bg"
                    android:contentDescription="@null"
                    android:padding="12dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/btn_my_setting"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:id="@+id/share"
                    android:background="@drawable/share"
                    android:layout_centerVertical="true"
                    android:layout_toLeftOf="@+id/iv_logo_zxing"
                    android:layout_toStartOf="@+id/iv_logo_zxing" />

            </RelativeLayout>

            <FrameLayout
                android:id="@+id/user_info_icon_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <com.example.henshin.study.touxiang.ZQRoundOvalImageView
                    android:id="@+id/iv_portrait"
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    android:scaleType="fitXY"
                    android:src="@mipmap/study"
                    android:onClick="btnClick"
                    />

                <ImageView
                    android:id="@+id/iv_gender"
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_gravity="right|bottom"
                    android:layout_marginBottom="4dp"
                    android:layout_marginRight="4dp"
                    android:contentDescription="@null"
                    android:src="@drawable/ic_male" />
            </FrameLayout>

            <TextView
                android:id="@+id/tv_nick"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:maxLines="1"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:text="Henshin" />


        </LinearLayout>

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <View
            android:id="@+id/about_line"
            style="@style/h_line"
            android:layout_height="1px"
            android:background="#FF6FDB94" />


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/rl_message"
                        style="@style/option_item_rl"
                        android:clickable="true"
                        android:layout_height="48dp">

                        <ImageView
                            android:layout_width="57dp"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="12dp"
                            android:contentDescription="@null"
                            android:src="@drawable/arrow" />

                        <TextView
                            style="@style/option_item_text"
                            android:text="@string/message" />

                        <View
                            android:layout_width="0dp"
                            android:layout_height="10dp"
                            android:layout_weight="1" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="20dp"
                            android:contentDescription="@null"
                            android:src="@drawable/ic_arrow_right" />
                    </LinearLayout>

                    <View
                        style="@style/h_line"
                        android:layout_height="1px"

                        android:background="@color/list_divider_color" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/white"
                    android:orientation="vertical">



                    <LinearLayout
                        android:id="@+id/rl_blog"
                        style="@style/option_item_rl"
                        android:layout_height="50dp">

                        <ImageView
                            android:layout_width="57dp"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="12dp"
                            android:contentDescription="@null"
                            android:src="@drawable/paiming" />

                        <TextView
                            style="@style/option_item_text"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:text="@string/blog" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="20dp"
                            android:contentDescription="@null"
                            android:src="@drawable/ic_arrow_right" />
                    </LinearLayout>
                    <View
                        style="@style/h_line"
                        android:layout_height="1px"

                        android:background="@color/list_divider_color" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/white"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/rl_info_question"
                        style="@style/option_item_rl"
                        android:layout_height="52dp">

                        <ImageView
                            android:layout_width="57dp"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="12dp"
                            android:contentDescription="@null"
                            android:src="@drawable/clock" />

                        <TextView
                            style="@style/option_item_text"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:text="@string/question" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="20dp"
                            android:contentDescription="@null"
                            android:src="@drawable/ic_arrow_right" />
                    </LinearLayout>

                    <View
                        style="@style/h_line"
                        android:layout_height="1px"

                        android:background="@color/list_divider_color" />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/white"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/rl_team"
                        style="@style/option_item_rl"
                        android:layout_height="49dp">

                        <ImageView
                            android:layout_width="57dp"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="12dp"
                            android:contentDescription="@null"
                            android:src="@drawable/brush" />

                        <TextView
                            style="@style/option_item_text"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:text="@string/team" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="20dp"
                            android:contentDescription="@null"
                            android:src="@drawable/ic_arrow_right" />
                    </LinearLayout>

                    <View
                        style="@style/h_line"
                        android:layout_height="1px"
                        android:background="@color/list_divider_color" />
                </LinearLayout>

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</LinearLayout>


